feat: criar camadas de arquitetura usando caso de uso fetchjob como exemplo

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-resteasy-reactive'
+    implementation 'me.nithanim.quarkus:quarkus-amazon-dynamodb-enhanced:1.0.1'
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
+    testImplementation 'org.mockito:mockito-core'
 }
 
 group 'com.lucasreis10.arq.ref'
