--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,13 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.mockito:mockito-core'
+    implementation 'io.quarkus:quarkus-core:2.8.2.Final'
+    // https://mvnrepository.com/artifact/io.quarkus/quarkus-core-deployment
+    implementation 'io.quarkus:quarkus-core-deployment:2.8.2.Final'
+    // https://mvnrepository.com/artifact/io.quarkus/quarkus-amazon-lambda
+    implementation 'io.quarkus:quarkus-amazon-lambda:2.8.2.Final'
+
+
 }
 
 group 'com.lucasreis10.arq.ref'
