--- a/build.gradle
+++ b/build.gradle
@@ -21,16 +21,14 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'me.nithanim.quarkus:quarkus-amazon-dynamodb-enhanced:1.0.1'
+    implementation 'io.quarkus:quarkus-core:2.8.2.Final'
+    implementation 'io.quarkus:quarkus-core-deployment:2.8.2.Final'
+    implementation 'io.quarkus:quarkus-amazon-lambda:2.8.2.Final'
+
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.mockito:mockito-core'
-    implementation 'io.quarkus:quarkus-core:2.8.2.Final'
-    // https://mvnrepository.com/artifact/io.quarkus/quarkus-core-deployment
-    implementation 'io.quarkus:quarkus-core-deployment:2.8.2.Final'
-    // https://mvnrepository.com/artifact/io.quarkus/quarkus-amazon-lambda
-    implementation 'io.quarkus:quarkus-amazon-lambda:2.8.2.Final'
-
-
+    testImplementation "org.assertj:assertj-core:3.22.0"
 }
 
 group 'com.lucasreis10.arq.ref'
