--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version "1.6.10"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.6.10"
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'org.jetbrains.kotlin.plugin.allopen' version '1.6.10'
     id 'io.quarkus'
 }
 
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
-    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}")
+    implementation enforcedPlatform('${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}')
+    implementation enforcedPlatform('${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}')
     implementation 'org.apache.camel.quarkus:camel-quarkus-aws2-lambda'
     implementation 'org.apache.camel.quarkus:camel-quarkus-aws2-ddb'
     implementation 'io.quarkus:quarkus-kotlin'
@@ -28,7 +28,8 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.mockito:mockito-core'
-    testImplementation "org.assertj:assertj-core:3.22.0"
+    testImplementation 'org.assertj:assertj-core:3.22.0'
+    testImplementation 'org.testcontainers:testcontainers:1.16.3'
 }
 
 group 'com.lucasreis10.arq.ref'
@@ -40,9 +41,9 @@ java {
 }
 
 allOpen {
-    annotation("javax.ws.rs.Path")
-    annotation("javax.enterprise.context.ApplicationScoped")
-    annotation("io.quarkus.test.junit.QuarkusTest")
+    annotation('javax.ws.rs.Path')
+    annotation('javax.enterprise.context.ApplicationScoped')
+    annotation('io.quarkus.test.junit.QuarkusTest')
 }
 
 compileKotlin {
