--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ dependencies {
     implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'me.nithanim.quarkus:quarkus-amazon-dynamodb-enhanced:1.0.1'
     implementation 'io.quarkus:quarkus-core:2.8.2.Final'
-    implementation 'io.quarkus:quarkus-core-deployment:2.8.2.Final'
     implementation 'io.quarkus:quarkus-amazon-lambda:2.8.2.Final'
+    implementation 'io.quarkus:quarkus-test-common:2.8.2.Final'
+
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
