--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation enforcedPlatform('${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}')
-    implementation enforcedPlatform('${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}')
+    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:2.8.1.Final')
+    implementation enforcedPlatform('io.quarkus.platform:quarkus-camel-bom:2.8.1.Final')
     implementation 'org.apache.camel.quarkus:camel-quarkus-aws2-lambda'
     implementation 'org.apache.camel.quarkus:camel-quarkus-aws2-ddb'
     implementation 'io.quarkus:quarkus-kotlin'
@@ -30,7 +30,7 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.assertj:assertj-core:3.22.0'
-    testImplementation 'org.testcontainers:testcontainers:1.16.3'
+    testImplementation 'org.testcontainers:testcontainers:1.17.1'
 }
 
 group 'com.lucasreis10.arq.ref'
