--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -4,3 +4,9 @@ aws:
     endpoint: ${URL_DYNAMODB}
 
 
+"%test":
+    aws:
+      region: eu-central-1
+      accesskey: fake-key
+    dynamodb:
+      endpoint: http://localhost:8000
